# electronics-saling-network

./: .dockerignore  .env.template  Dockerfile  README.md  README_RU.md  docker-compose.yml  pyproject.toml
esn/: .env.template  manage.py
esn/contacts/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
esn/contacts/migrations/: 0001_initial.py  0002_alter_address_options.py
esn/custom_auth/: serializers.py  urls.py  views.py
esn/employees/: admin.py  models.py
esn/employees/migrations/: 0001_initial.py
esn/esn/: asgi.py  celery.py  permissions.py  settings.py  urls.py  wsgi.py
esn/network/: admin.py  choices.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
esn/network/management/commands/: fill_network_nodes.py
esn/network/migrations/: 0001_initial.py  0002_remove_networknode_contact_networknode_city_and_more.py
esn/network/static/network/js/: copy_email.js
esn/products/: models.py  serializers.py  urls.py  views.py
esn/products/migrations/: 0001_initial.py
